# bc_software

./: .env.example  .importlinter  .pylintrc  alembic.ini  docker-compose.yml  lint.bat  pyproject.toml
.vscode.example/: settings.example.json
app/api/: entrypoint.py
app/api/controllers/: index.py
app/database/: base.py
app/database/migrations/: env.py
docker/: backend.dockerfile
scripts/: web-start-reload.sh
